# eco_drive_cycles

./: .gitignore  CHANGELOG.md  CLAUDE.md  DATA.md  README.md  TODOS.md  pyproject.toml
.agents/rules/: eco_drives.md
.agents/workflows/: learn.md  update_docs.md
.context/retros/: 2026-04-06-1.json
_data/: file_headers.csv  load_file.py
brainstorming/: cli-subcommands.md  microtrip_design_spec.md
brainstorming/concepts/: trip_collection_usage.md
brainstorming/data_handling/: DATA.md  Torque_output.md  how_to_handle_data.md
brainstorming/data_schema/: DataReductionNotes.md  FUEL_EKO_wars.dbml
brainstorming/refactor-proposals/: Claude-prompts_for_upgrade_to_v0.3md  clarification-v0.3.md
docs/concepts/: 2. FUEL EKO WARS 2.md  2. FUEL EKO WARS 2.pptx  fuel_eko_wars.md  fuel_eko_wars.qmd
docs/data_schema/: data_schema.md
docs/designs/: cli-subcommands.md  method_dependencies.md  obd-file-processing-config.md  refactor_v0.3.md
examples/: README.md  vis.py
examples/cli/: README.md  analyze.py  ingest.py
examples/cli-single/: analyse_single.py  ingest_single_xlsx.py  inspect_parquet.py  inspect_raw.py  inspect_xlsx.py
examples/gui/: README.md  main.py
examples/scripts/: convert_csv_to_xslx.py  open_file.py  vis_trip.py  vis_vicinity_bokeh.py
examples/storage/: parquet_metadata.py  parse_trips.py
raw_data/: trackLog-2019-Sep-16_18-45-06.xlsx  trackLog-2019-Sep-18_18-47-50.xlsx  trackLog-2019-Sep-19_18-39-31.xlsx  trackLog-2019-Sep-20_10-49-22.xlsx  trackLog-2019-Sep-22_18-47-12.xlsx
raw_data/2019-opsimoulis/: ingest_config.yaml  metadata-.yaml  trackLog-2019-Sep-17_11-02-01.xlsx  (+2 more)
scripts/: migrate_to_archive.py
src/: pyproject.toml
tests/: conftest.py  test_calculations.py  test_cli_analyze.py  test_cli_config_init.py  test_cli_extract.py  test_cli_ingest.py  test_gps_time_parser.py  test_log_utils.py  test_metrics.py  test_obd_file.py  test_processing_config.py  test_representative_route.py  test_run_calculations.py  test_schema.py  test_segmentation.py  test_trip.py  test_trip_collection.py
(+57 files in other folders)
