[project]
name = "eco-drive-cycles"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "students/DriveGUI",
    "src",
]

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

